@@ -2,11 +2,26 @@
 #include <netinet/in.h>
 #include <dts-module.h>
 
+static int get_sv4_start(DtsObject o, DtsObject data) {
+	struct timeval * tv = (struct timeval*)data->getdata();
+	tv->tv_sec = ntohl(*(time_t*)(o->getdata() + 34));
+	tv->tv_usec = 1000 * ntohs(*(ushort*)(o->getdata() + 38));
+	return 1;
+}
+
+static int get_sv4_stop(DtsObject o, DtsObject data) {
+	struct timeval * tv = (struct timeval*)data->getdata();
+	tv->tv_sec = ntohl(*(time_t*)(o->getdata() + 40));
+	tv->tv_usec = 1000 * ntohs(*(ushort*)(o->getdata() + 44));
+	return 1;
+}
+
 static int get_sv4_data(DtsObject datum, DtsObject data) {
 	data->setdata(datum->getdata() + 51);
 	data->setsize(datum->getsize() - 51);
 	return (data->getsize() > 0);
 }
+
 static int get_sv4_prompt(DtsObject o, DtsObject stro) {
 	void * p = o->getdata()+ 47;
 	ushort prompt = ntohs( *(ushort*)p );
@@ -35,14 +50,16 @@ struct dts_field_spec dts_type_sv4_fields[] = {
 	{ "nuint32",	"srcpackets",	NULL },
 	{ "nuint32",	"dstbytes",	NULL },
 	{ "nuint32",	"srcbytes",	NULL },
-	{ "ntime",	"start",	NULL },
+	{ "ntime",	"starts",	NULL },
 	{ "nushort",	"startms",	NULL },
-	{ "ntime",	"stop",		NULL },
+	{ "ntime",	"stops",	NULL },
 	{ "nushort",	"stopms",	NULL },
 	{ "ubyte",	"ipprotocol",	NULL },
 	{ "nushort",	"prompt",	NULL },
 	{ "string",	"promptstr",	get_sv4_prompt },
 	{ "bytes",	"payload",	get_sv4_data },
+	{ "timeval",	"start",	get_sv4_start },
+	{ "timeval",	"stop",		get_sv4_stop },
         { NULL,		NULL,		NULL }
 };
 
